# CCC

./: .env.example  .gitignore  README.md  SETUP.md  add_is_ccs.py  analyze_ccs_statistics.py  ccs_repo_processor.py  filter_extract_ccs.py  filter_keyword_time.py  filter_repos.py  parquet_json.py  pyproject.toml  split_ccs_commits.py
